test/analysis/flowanalysis/rec_obj-2.good
rec_obj-2.chpl:1: error: unable to determine type of field from nil
